# PyEEPro

./: .gitignore  LICENSE  README.md  mnist_recognizer.py  pyproject.toml
data/: data_goes_here.md
docs/: Analization of 'Smart Meters in London'.pptx  Project Report.docx  REPORT.md  pytorch_presentation_plan.md
pytorch_examples/: mnist_gpu.py  mnist_recognizer.py  mnist_tutorial.md
src/: main.py  settings.py
src/app/: config.py  sidebar.py
src/app/core/: data_processor.py
src/app/tabs/: __init__.py  eda.py  household.py  ml.py  not_found.py  time_based_trends.py  weather.py
src/app/utils/: __init__.py  bar_energy_plot.py  energy_plot.py  line_energy_plot.py  year_string.py
src/data/: __init__.py  cache_manager.py  data_acorn.py  data_processor.py  data_storage.py  dummy_data.py
src/ml/: autoencoder.py  class_autoencoder.py  mail_ml.py  ml_data_processor.py  model.py  system_resource_manager.py  trainer.py
src/scripts/: __init__.py  dataset_exists.py  dataset_extract.py  dataset_validator.py  extract_dataset.py
